# xt-vaep

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  debug.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: leagues.yml
models/: vaep_concede.joblib  vaep_score.joblib
models/vaep/: concede_hgb.joblib  concede_iso.joblib  score_hgb.joblib  score_iso.joblib
models/xt_tuned/: best_grid.npz  grid_12x9.npz  grid_16x12.npz  grid_24x16.npz
reports/validation/: vaep_metrics.csv  xt_stability.csv  xt_stability_spearman.txt
reports/xt/: xt_grid_metrics.csv
scripts/: build_player_table.py  fetch_statsbomb_open.py  normalize_metrics.py  train_vaep.py  train_vaep_lite.py  train_xt.py  tune_xt_grid.py  validate_models.py
src/football_analytics/features/: __init__.py  basic_feats.py  labels.py  minutes.py  pressure.py  roles.py  roles_cluster.py  states.py  vaep_features.py
src/football_analytics/io/: statsbomb.py
src/football_analytics/metrics/: duels.py  progressive.py  retention.py
src/football_analytics/models/vaep/: train.py  value.py
src/football_analytics/models/xt/: grid.py  infer.py
